2008-05-03  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej.

        Bug 18864: SquirrelFish: Support getter and setter definition in object literals
        <https://bugs.webkit.org/show_bug.cgi?id=18864>

        Add new opcodes to allow us to add getters and setters to an object.  These are
        only used by the codegen for object literals.

        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::emitPutGetter):
        (KJS::CodeGenerator::emitPutSetter):
        * VM/CodeGenerator.h:
        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):
        * VM/Opcode.h:
        * kjs/nodes.cpp:
        (KJS::PropertyListNode::emitCode):

2008-05-02  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver.
        
        - properly copy globals into and out of implicit call register
        files, otherwise they will fail at global lookup

        Fixes fast/js/array-tostring-and-join.html layout test.
        
        * VM/RegisterFileStack.cpp:
        (KJS::RegisterFileStack::pushGlobalRegisterFile):
        (KJS::RegisterFileStack::popGlobalRegisterFile):
        (KJS::RegisterFileStack::pushFunctionRegisterFile):
        (KJS::RegisterFileStack::popFunctionRegisterFile):

2008-05-02  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        Fixed https://bugs.webkit.org/show_bug.cgi?id=18822
        SQUIRRELFISH: incorrect eval used in some cases
        
        Changed all code inside the machine to fetch the lexical global object
        directly from the scope chain, instead of from the ExecState.
        
        Clients who fetch the lexical global object through the ExecState
        still don't work.
        
        SunSpider reports no change.

        * VM/Machine.cpp:
        (KJS::Machine::privateExecute): Fetch the lexical global object from
        the scope chain.
        
        * kjs/ExecState.h:
        (KJS::ExecState::ExecState::lexicalGlobalObject): Moved the logic for